--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -7,7 +11,33 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+header {
+  display: flex;
+  gap: 10px;
+  justify-content: center;
+  flex-wrap: wrap;
+  padding: 20px 0;
+  background: #282c34;
+}
+
+header a {
+  color: white;
+  text-decoration: none;
+}
+
+a {
+  padding: 5px 15px;
+  border-radius: 10px;
+  transition: 100ms;
+}
+
+main {
+  margin: 20px 10px;
+}
+footer {
+  background: #282c34;
+  color: white;
+  display: flex;
+  justify-content: center;
+  padding: 20px 0;
 }
